--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   typewriter: ^0.0.3
   flutter_spinkit: 4.1.2+1
   delayed_display: 1.1.0
+  flutter_gifimage: ^1.0.1
   flutter_svg: ^0.22.0
   timelines: 0.0.2+1
   url_launcher: ^6.0.4
