--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   particles_flutter: ^0.1.2
   provider: ^5.0.0
   hovering: ^1.0.4
-  swipe_up:
+  assets_audio_player: ^3.0.3+3
+  # swipe_up:
   carousel_slider: ^4.0.0
 
 dev_dependencies:
