--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   provider: ^5.0.0
   hovering: ^1.0.4
   assets_audio_player: ^3.0.3+3
-  # swipe_up:
+  swipe_up:
   carousel_slider: ^4.0.0
 
 dev_dependencies:
