--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_spinkit: 4.1.2+1
   delayed_display: 1.1.0
   flutter_gifimage: ^1.0.1
+  universal_html: ^2.0.8
+
   flutter_svg: ^0.22.0
   timelines: 0.0.2+1
   url_launcher: ^6.0.4
